<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.reddit.domain.type.Period" />

        <variable
            name="viewModel"
            type="com.reddit.features.main.filter.PeriodViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_label_top_post_from"
            android:textAllCaps="true"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.saveFilter(Period.All)}"
                android:text="@string/dialog_label_all" />

            <RadioButton
                android:id="@+id/hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.saveFilter(Period.Hour)}"
                android:text="@string/dialog_label_hour" />

            <RadioButton
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.saveFilter(Period.Day)}"
                android:text="@string/dialog_label_24_hours" />

            <RadioButton
                android:id="@+id/week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.saveFilter(Period.Week)}"
                android:text="@string/dialog_label_week" />

            <RadioButton
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.saveFilter(Period.Month)}"
                android:text="@string/dialog_label_month" />

            <RadioButton
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.saveFilter(Period.Year)}"
                android:text="@string/dialog_label_year" />

        </RadioGroup>

    </LinearLayout>
</layout>