<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.reddit.features.main.MainViewModel" />

        <variable
            name="post"
            type="com.reddit.domain.model.Post" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@{`` + post.score}"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/comments"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/main_label_rating" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_comment"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@{`` + post.commentsCount}"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/main_label_comments" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:selectableItemBackground"
            android:drawableStart="@drawable/ic_share"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onShareClicked(post)}"
            android:text="@string/main_label_share"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/comments"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/main_label_share" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>